--- a/Day 3 CSS Variable/index.html
+++ b/Day 3 CSS Variable/index.html
@@ -10,7 +10,7 @@
     
     <h2>Update CSS variable with <span class="h1">JS</span></h2>
 
-    <div class="control">
+    <div class="controls">
         <label for="spacing">Spacing:</label>
         <input id="spacing" type="range" name="spacing" min="10" max="200" value="10" data-sizing="px">
 
@@ -22,7 +22,7 @@
 
     </div>
 
-    <img style="height: 350px; width: 500px;" src="https://images.unsplash.com/photo-1629949875897-b3c316d47a35?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OHx8ZnJlZSUyMGltYWdlc3xlbnwwfDJ8MHx8fDA%3D">
+    <img style="height: 300px; width: 500px;" src="https://images.unsplash.com/photo-1629949875897-b3c316d47a35?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OHx8ZnJlZSUyMGltYWdlc3xlbnwwfDJ8MHx8fDA%3D">
 
     <style>
         :root{
@@ -57,7 +57,14 @@
     </style>
 
     <script>
-        
+        const inputs = document.querySelectorAll('.controls input');
+        function handleUpdate(){
+            const suffix = this.dataset.sizing || '';
+            document.documentElement.style.setProperty(`--${this.name}`, this.value + suffix);
+        }
+
+        inputs.forEach(input => input.addEventListener('change', handleUpdate));
+        inputs.forEach(input => input.addEventListener('mousemove', handleUpdate));
     </script>
 </body>
 </html>
