--- a/Practice/index.html
+++ b/Practice/index.html
@@ -4,15 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+  
 </head>
 <body>
-    
-    <script>
-
-        const person = {firstName:"Deepak", lastName:"Singh", age:22, eyeColor:"black"}
-        console.log(person);
-        
-
-    </script>
+    <p id="demo">Hello</p>
+    <script src="/Practice/ObjectPrac.js"></script>
 </body>
 </html>
