--- a/Day 5 Flex Panel Image Gallery/index.html
+++ b/Day 5 Flex Panel Image Gallery/index.html
@@ -3,14 +3,91 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   
     <title>Flex Panel</title>
+    <link href='https://fonts.googleapis.com/css?family=Amatic+SC' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
 
     <style>
-        
+        html{
+            box-sizing: border-box;
+            background: #ffc600;
+            font-family: 'helvetica neue';
+            font-size: 20px;
+            font-weight: 200;
+        }
+
+        body{
+            margin: 0;
+        }
+        *, *:before,*:after{
+            box-sizing: inherit;
+        }
+        .panels{
+            min-height: 100vh;
+            overflow: hidden;
+            display: flex;
+        }
+        .panel{
+            background: #6B0F9C;
+            box-shadow: inset 0 0 0 5px rgba(255, 255, 255, 0.1);
+            color: white;
+            align-items: center;
+          transition:
+        font-size 0.7s cubic-bezier(0.61,-0.19, 0.7,-0.11),
+        flex 0.7s cubic-bezier(0.61,-0.19, 0.7,-0.11),
+        background 0.2s;
+            font-size: 20px;
+            background-size: cover;
+            background-position: center;
+            flex: 1;
+            justify-content: center;
+            display: flex;
+            flex-direction: column;
+
+        }
+        .panel1 { background-image:url(https://imgs.search.brave.com/6-mayibfogaFLXMvHlZjjAVVFyQs7ukijDqJ5PaJPFk/rs:fit:500:0:0:0/g:ce/aHR0cHM6Ly93YWxs/cGFwZXJhY2Nlc3Mu/Y29tL2Z1bGwvOTg0/MjA2Ny5qcGc); }
+    .panel2 { background-image:url(https://imgs.search.brave.com/TFZzLnWZvTmEdXvtheO7V4SKODdt3Yq3eIa0DhiBI_Y/rs:fit:500:0:0:0/g:ce/aHR0cHM6Ly9pLnBp/bmltZy5jb20vb3Jp/Z2luYWxzLzdhL2Rh/L2UwLzdhZGFlMDRh/OTRhYzYyM2UzNGMz/NmE0ZmVlNmY3YTQw/LmpwZw); }
+    .panel3 { background-image:url(https://images.unsplash.com/photo-1465188162913-8fb5709d6d57?ixlib=rb-0.3.5&q=80&fm=jpg&crop=faces&cs=tinysrgb&w=1500&h=1500&fit=crop&s=967e8a713a4e395260793fc8c802901d); }
+    .panel4 { background-image:url(https://imgs.search.brave.com/y7O0QFYyucYko2c63BOWiDMGAp9Wz2IR8PVuRL3lHKw/rs:fit:500:0:0:0/g:ce/aHR0cHM6Ly9jZG4u/cGl4YWJheS5jb20v/cGhvdG8vMjAxNS8x/Mi8xMS8xNi8zMy90/aGUtZW5naW5lLTEw/ODg0MTZfNjQwLmpw/Zw); }
+    .panel5 { background-image:url(https://imgs.search.brave.com/UmRwowDWjOZwPWRjinTmUcLFKIBgD0rtHYG2enD-lsA/rs:fit:500:0:0:0/g:ce/aHR0cHM6Ly93d3cu/cG5na2V5LmNvbS9w/bmcvZnVsbC84Nzgt/ODc4NzUzN18xNTAw/LXgtMTUwMC02LnBu/Zw); }
+
+    .panel > *{
+        margin: 0;
+        width: 100%;
+        transition: transform 0.5s;
+        flex: 1 0 auto;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+    }
+
+    .panel > *:first-child{ transform: translateY(-100%);}
+    .panel.open-active > *:first-child { transform: translateY(0); }
+    .panel > *:last-child { transform: translateY(100%); }
+    .panel.open-active > *:last-child { transform: translateY(0); }
+
+    .panel p{
+        text-transform: uppercase;
+        font-family: 'Amatic SC', cursive;
+        text-shadow: 0 0 4px rgba(0, 0, 0, 0.72), 0 0 14px rgba(0, 0, 0, 0.45);
+        font-size: 2em;
+    }
+    .panel p:nth-child(2){
+        font-size: 4em;
+    }
+    .panel.open{
+        flex: 5;
+        font-size: 40px;
+    }
+      @media only screen and (max-width: 600px) {
+      .panel p {
+        font-size: 1em;
+      }
+    }
     </style>
 
     <div class="panels">
@@ -30,6 +107,26 @@
         <p>In</p>
         <p>Motion</p></div>
     </div>
+
+    <script>
+        const panels = document.querySelectorAll('.panel');
+
+            function toggleOpen() {
+                this.classList.toggle('open');
+            }
+
+            function toggleActive(e) {
+                if (e.propertyName.includes('flex') || e.propertyName === 'flex-grow') {
+                    this.classList.toggle('open-active');
+                }
+            }
+
+            panels.forEach(panel => {
+                panel.addEventListener('click', toggleOpen);
+                panel.addEventListener('transitionend', toggleActive);
+            });
+
+    </script>
 </body>
 
 </html>
